syntax = "proto3";

//import "google/protobuf/timestamp.proto-go";
//import "google/api/annotations.proto";

service Controller {
  rpc GenerateToken(UserData) returns (Result){
  }
  rpc DeleteToken(Null) returns (Result){
  }
  rpc GetToken(TokenData) returns (Result){
  }
  rpc GetAllToken(Null) returns (stream TokenData){
  }
  rpc AddUser (UserData) returns (Result){
  }
  rpc UpdateUser (UserData) returns (Result){
  }
  rpc DeleteUser (UserData) returns (Result){
  }
  rpc GetUser (UserData) returns (UserData){
  }
  rpc GetAllUser (Null) returns (stream UserData){
  }
  rpc AddGroup (GroupData) returns (Result){
  }
  rpc UpdateGroup (GroupData) returns (Result){
  }
  rpc JoinGroup (GroupData) returns (Result){
  }
  rpc DeleteGroup (GroupData) returns (Result){
  }
  rpc GetGroup (GroupData) returns (stream GroupData){
  }
  rpc GetAllGroup (Null) returns (stream GroupData){
  }
  rpc AddNode (NodeData) returns (Result){
  }
  rpc UpdateNode (NodeData) returns (Result){
  }
  rpc DeleteNode (NodeData) returns (Result){
  }
  rpc GetNode (Null) returns (stream NodeData){
  }
  rpc AddImaCon (ImaConData) returns (Result){
  }
  rpc UpdateImaCon (ImaConData) returns (Result){
  }
  rpc DeleteImaCon (ImaConData) returns (Result){
  }
  rpc GetImaCon (Null) returns (stream ImaConData){
  }
}

message Null {
}

message UserData {
  uint64 id = 1;
  string name = 2;
  string pass = 3;
  uint32 auth = 4;
  string admingroup = 5;
  string usergroup = 6;
}

//Token Result
//data1: Token data2: UserName
message Result {
  bool status = 1;
  string info = 2;
  string data1 = 3;
  string data2 = 4;
  string data3 = 5;
}


message TokenData {
  uint64 id = 1;
  string token = 2;
  uint64 userid = 3;
  uint64 begintime = 4;
  uint64 endtime = 5;
}

//Add : mode0 <- Administrator | mode1 <- User | mode2 <- Team
//Get : mode0 <-All | mode1 <- Select | mode2 <- MyGroup
//Join: mode0 <- Add | mode1 <- Delete
message GroupData {
  uint64 id = 1;
  string name = 2;
  string admin = 3;
  string user = 4;
  uint32 mode = 5;
  SpecData sepc = 6;
}

message SpecData {
  uint32 vm = 1;
  uint32 cpu = 2;
  uint32 mem = 3;
  uint64 storage = 4;
  string net = 5;
}

message NodeData{
  uint64 id = 1;
  string ip = 2;
  string hostname = 3;
  uint32 cpu = 4;
  uint32 mem = 5;
  string path = 6;
  bool active = 7;
}

message ImaConData{
  uint64 id = 1;
  string ip = 2;
  string hostname = 3;
}